--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-navigation": "^7.37.1",
+    "react-native-pager-view": "^6.2.2",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-tab-view": "^3.5.2",
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
