--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/database": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.16",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
