--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.16",
+    "expo-asset": "~8.10.1",
+    "expo-file-system": "~15.4.4",
+    "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
     "nativewind": "^2.0.11",
