--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "^49.0.16",
-    "expo-asset": "~8.10.1",
-    "expo-file-system": "~15.4.4",
+    "expo": "^49.0.17",
+    "expo-asset": "^8.10.1",
+    "expo-file-system": "^15.6.0",
     "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
+    "npx": "^10.2.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-heroicons": "^3.2.0",
