--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.17",
     "expo-asset": "^8.10.1",
-    "expo-file-system": "^15.6.0",
-    "expo-sqlite": "^11.6.0",
+    "expo-file-system": "~15.4.4",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
     "install": "^0.13.0",
@@ -26,11 +26,11 @@
     "react-native": "0.72.6",
     "react-native-heroicons": "^3.2.0",
     "react-native-navigation": "^7.37.1",
-    "react-native-pager-view": "^6.2.2",
+    "react-native-pager-view": "6.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "twrnc": "^3.6.4"
   },
