--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "npx": "^10.2.2",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.201",
     "babel-plugin-module-resolver": "^5.0.0",
     "tailwindcss": "3.3.2"
   },
