--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "vuzappcursa4onmac",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-firebase/database": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.17",
@@ -27,6 +25,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-heroicons": "^3.2.0",
+    "react-native-mmkv": "^2.11.0",
+    "react-native-mmkv-storage": "^0.9.1",
     "react-native-navigation": "^7.37.1",
     "react-native-pager-view": "6.2.0",
     "react-native-responsive-screen": "^1.4.2",
@@ -35,7 +35,7 @@
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "twrnc": "^3.6.4",
-    "zustand": "^4.4.6"
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
