--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/database": "^18.6.1",
+    "@react-native-firebase/messaging": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.17",
     "expo-asset": "^8.10.1",
+    "expo-dev-client": "~2.4.12",
     "expo-file-system": "~15.4.4",
+    "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
@@ -24,9 +29,8 @@
     "npx": "^10.2.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-heroicons": "^3.2.0",
-    "react-native-mmkv": "^2.11.0",
-    "react-native-mmkv-storage": "^0.9.1",
     "react-native-navigation": "^7.37.1",
     "react-native-pager-view": "6.2.0",
     "react-native-responsive-screen": "^1.4.2",
@@ -34,8 +38,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
-    "twrnc": "^3.6.4",
-    "expo-splash-screen": "~0.20.5"
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
