--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.72.6",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-navigation": "^7.37.1",
     "react-native-pager-view": "6.2.0",
     "react-native-responsive-screen": "^1.4.2",
