--- a/app.json
+++ b/app.json
@@ -32,6 +32,11 @@
       "eas": {
         "projectId": "b61aee13-ccba-42c1-a42a-f07641835a95"
       }
-    }
+    },
+    "plugins": [
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth"
+
+    ]
   }
 }
