--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.7.1",
     "@react-native-firebase/database": "^18.6.1",
     "@react-native-firebase/messaging": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -22,7 +23,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.5.2",
+    "firebase": "^10.7.1",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
