--- a/package.json
+++ b/package.json
@@ -8,24 +8,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.8",
-    "@react-native-firebase/app": "^18.6.1",
-    "@react-native-firebase/auth": "^18.7.1",
-    "@react-native-firebase/database": "^18.6.1",
-    "@react-native-firebase/messaging": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.17",
     "expo-asset": "^8.10.1",
     "expo-dev-client": "~2.4.12",
-    "expo-file-system": "~15.4.4",
     "expo-splash-screen": "~0.20.5",
-    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.7.1",
     "install": "^0.13.0",
-    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "npx": "^10.2.2",
     "react": "18.2.0",
@@ -39,14 +30,12 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-tab-view": "^3.5.2",
-    "twrnc": "^3.6.4"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/lodash": "^4.14.201",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "tailwindcss": "3.3.2"
+    "babel-plugin-module-resolver": "^5.0.0"
   },
   "private": true
 }
