--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/core": "^7.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "crypto-js": "^4.2.0",
     "expo": "^52.0.11",
     "expo-asset": "^8.10.1",
     "expo-dev-client": "~2.4.12",
