--- a/app.json
+++ b/app.json
@@ -1,19 +1,17 @@
 {
   "expo": {
-    "name": "TimetableApp",
-    "slug": "TimetableApp",
+    "name": "testik",
+    "slug": "testik",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
     "ios": {
       "supportsTablet": true
     },
@@ -21,8 +19,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.company.timetableapp"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
