--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "vuzappcursa4onmac",
+  "name": "testik",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/core": "^7.1.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/core": "^7.3.0",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
     "crypto-js": "^4.2.0",
-    "expo": "^52.0.11",
-    "expo-asset": "^8.10.1",
-    "expo-dev-client": "~2.4.12",
-    "expo-splash-screen": "^0.29.13",
-    "expo-status-bar": "~1.6.0",
-    "npx": "^3.0.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-navigation": "^7.37.1",
-    "react-native-pager-view": "6.2.0",
+    "expo": "~52.0.18",
+    "expo-asset": "^11.0.1",
+    "expo-splash-screen": "^0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-navigation": "^7.40.3",
+    "react-native-pager-view": "^6.6.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.3.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-svg": "13.9.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-svg": "^15.10.1",
+    "react-native-tab-view": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/lodash": "^4.14.201",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
